package omu.domain;

public enum OrderStatus {
    DRAFT,
    PAID,
    SENT_TO_PREPARATION,
    CANCELLED
}

