package omu.domain;

public enum ProductStatus {
    AVAILABLE,
    UNAVAILABLE
}

