package omu.domain;

public enum UserRole {
    STUDENT,
    STAFF
}

